Banner white gradient, slider overflow issue fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -158,6 +158,17 @@ input {
         opacity: 0.75;
     }
 
+    &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 25vh;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+        z-index: 3004;
+    }
+
     img {
         height: 100%;
         width: 100%;
@@ -321,12 +332,17 @@ input {
     .swiper-wrap {
         position: relative;
         padding: 20px;
+        overflow: hidden;
+    }
+    .arrow-wrap {
+        position: relative;
     }
 
     .swiper {
         width: 100%;
         height: 100%;
         margin-top: 30px;
+        overflow: visible !important;
     }
 
     .swiper-slide {
@@ -376,6 +392,7 @@ input {
         justify-content: center;
         color: #161D5B !important;
         font-weight: 700;
+
         &:focus {
             outline: none !important;
         }
